--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
+    "react-stars": "^2.2.5",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
