--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^7.1.3",
     "react-stars": "^2.2.5",
     "react-toastify": "^11.0.3",
+    "recharts": "^2.15.1",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
